feat(dashboard): expand runtime controls and refresh model catalog
Add a dedicated diagnostics surface in the dashboard and backend API so operators can inspect effective storage paths, environment variables, and runtime context used by session and analytics endpoints. This also improves session/usage loading resilience for legacy persisted files and aligns settings UX with explicit routing model selection.

Refresh the bundled model catalogs for OpenAI, Anthropic, and Gemini with current families (including preview/spark variants), remove legacy OpenAI entries, and drop legacy Gemini 2.0/1.5 lines. Include related UI/API wiring, routing/config propagation updates, and test adjustments across affected services and systems.